fix contrast button "learn more" + padding

--- a/src/styles/components/queries.scss
+++ b/src/styles/components/queries.scss
@@ -94,6 +94,7 @@
             transform: rotate(90deg);
             margin-left: -22px;
             display: block;
+            margin-top:-28px;
         }
         &__category p {
             margin-bottom: -286px;
